--- a/CCT/pacman.css
+++ b/CCT/pacman.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     height: 95vh;
-    background-image: url("6ebeec04-dbae-4c13-acb0-985e88055c65.png"); /* main page background */
+    background-image: url("73497efb-846c-4c6f-992f-185bb2538c0b.png"); /* main page background */
     background-size:  101%;
     background-position: center; /* keeps it centered */
     background-repeat: no-repeat; /* prevents tiling */
@@ -10,15 +10,6 @@ body {
     justify-content: center;
     align-items: center;
     
-}
-
-
-/* Start menu container */
-#startMenu {
-    background-color: bisque;
-    padding: 30px;
-    border-radius: 10px;
-    text-align: center;
 }
 
 #board {
@@ -38,13 +29,17 @@ body {
 #winScreen {
     position: fixed;
     inset: 0;
-    background: radial-gradient(circle at center,
-        #1b2735 0%,
-        #090a0f 70%);
+
+    background-image: url("d3952789-eecb-49c0-8382-aa26f7599aea.png");
+    background-size: cover;       /* fills screen */
+    background-position: center;  /* centered */
+    background-repeat: no-repeat;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
     color: gold;
     font-family: 'Arial', sans-serif;
 }
@@ -94,9 +89,18 @@ body {
 }
 
 #startMenu p {
-    font-size: 22px;
-    margin-bottom: 30px;
-    color: white;
+    font-size: 21px;
+    margin: 10px 0; 
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+    color: whitesmoke;
+    line-height: 1.4; 
+    font-weight: 600; 
+    text-shadow: 0 1px 2px rgba(0,0,0,0.5); 
+}
+
+#startMenu button {
+    margin: 5px 0; 
 }
 
 #startMenu button {
@@ -118,14 +122,15 @@ body {
 
 #LoseScreen{
     position: fixed;
-    inset: 0;
-    background: linear-gradient(135deg, #a72d2d, #305d85);
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: yellow;
-    font-family: 'Arial', sans-serif;
+    background: linear-gradient(135deg, #a72d2d, #305d85);
     text-align: center;
 }
 
@@ -138,10 +143,20 @@ body {
     background: rgb(129, 65, 90);
     color: black;
     cursor: pointer;
-    transition: transform 0.2s, box-shadow 0.2s;
 }
 
-#winScreen,
+#LoseScreen h1{
+    font-size: 48px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+#LoseScreen p {
+    font-size: 25px;
+    text-align: center;
+}
+
+
 #LoseScreen,
 #board {
   display: none;
