--- a/CCT/pacman.css
+++ b/CCT/pacman.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     height: 95vh;
+    overflow: hidden;
     background-image: url("73497efb-846c-4c6f-992f-185bb2538c0b.png"); /* main page background */
     background-size:  101%;
     background-position: center; /* keeps it centered */
@@ -20,6 +21,8 @@ body {
     border-radius: 10px;
     padding: 30px;
     border-radius: 20px;
+    transform: scale(0.65);       /* zooms the board out */
+    transform-origin: center;   /* keeps it centered */
 }
 
 .hidden {
